# lotter

LotteryPredictionSystem/: lottery_data_cache.json  main.py  pyproject.toml
LotteryPredictionSystem/src/: data_collector.py  data_preprocessor.py  utils.py
LotteryPredictionSystem/src/models/: lstm_model.py  markov_xgboost_model.py  random_forest_model.py
