[project]
name = "repl-nix-workspace"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.11"
dependencies = [
    "beautifulsoup4>=4.13.3",
    "numpy==1.24.3",
    "pandas>=2.0.0",
    "requests>=2.32.3",
    "scikit-learn>=1.0.0",
    "tensorflow==2.14.0",
    "trafilatura>=2.0.0",
    "urllib3>=2.3.0",
    "xgboost>=1.7.0",
]
